--- a/style.css
+++ b/style.css
@@ -56,3 +56,19 @@ main form .rgpd {
 .rgpd label {
   font-size: 12px;
 }
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"],
+textarea {
+  transition: 0.5s ease-in-out;
+  box-shadow: 0 0 0px 0px rgb(19, 73, 172);
+  border-radius: 5px;
+}
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+textarea:focus {
+  box-shadow: 0 0 5px 4px rgb(9, 175, 252);
+}
