--- a/style.css
+++ b/style.css
@@ -22,18 +22,25 @@ main {
     text-align: center;
     } */
 main form {
-  width: 25%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: baseline;
   align-items: baseline;
 }
-main form div {
+main form > div {
   display: flex;
-  flex-direction: column;
+
   width: 95%;
   height: fit-content;
   margin: 5px;
+}
+main form > div > label {
+  width: fit-content;
+  margin: 0 10px 0 0;
+}
+main form > div > p {
+  margin: 0 10px 0 0;
 }
 main form > div > input {
   padding: 5px;
@@ -42,9 +49,14 @@ main form div div {
   display: flex;
   width: fit-content;
   flex-direction: row;
+  margin: 0 10px 0 0;
 }
 main form div div label {
   margin: 0 5px 0 0;
+}
+textarea {
+  width: 75%;
+  padding: 10px;
 }
 main form .rgpd {
   display: flex;
@@ -64,6 +76,8 @@ textarea {
   transition: 0.5s ease-in-out;
   box-shadow: 0 0 0px 0px rgb(19, 73, 172);
   border-radius: 5px;
+  border: none;
+  outline: none;
 }
 input[type="text"]:focus,
 input[type="password"]:focus,
